templ is donewith HTML+CSS

--- a/dribbble__1/index.html
+++ b/dribbble__1/index.html
@@ -4,8 +4,83 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="site/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Overpass:100" rel="stylesheet">
+	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 </head>
 <body>
+	<div class="container">
+		<div class="top-view">
+			<div class="overlay-color">
+				<div class="navbar">
+					<a href="#" class='search-button'><i class='fa fa-search'></i></a>
+					<div class="menu">
+						<span class="burger"></span>
+					</div>
+				</div>
+				<div class="header">
+					<h1>Good Morning !</h1>
+					<div class="profile-container">
+						<img src="https://randomuser.me/api/portraits/women/24.jpg" alt="" class='profile main'>
+						<div class="notification">
+							<span>3</span>
+						</div>
+					</div>
+				</div>					
+				<div class="moth-selection">
+					<i class="left">&#x3c</i>
+					<i class="right">&#x3e</i>
+					<span class="month">February</span>
+				</div>
+				
+			</div>
+		</div>
+		<div class="bottom-view">
+			<div class="week-container">
+				<ul class='week'>
+					<li class="day day-names"><span>sun</span></li>
+					<li class="day day-names"><span>mon</span></li>
+					<li class="day day-names"><span>tue</span></li>
+					<li class="day day-names"><span>wen</span></li>
+					<li class="day day-names"><span>thu</span></li>
+					<li class="day day-names"><span>fri</span></li>
+					<li class="day day-names"><span>sat</span></li>
+				</ul>
+				<ul>
+					<li class="day"><span>1</span></li>
+					<li class="day curent point"><span>2</span></li>
+					<li class="day"><span>3</span></li>
+					<li class="day"><span>4</span></li>
+					<li class="day point"><span>5</span></li>
+					<li class="day"><span>6</span></li>
+					<li class="day"><span>7</span></li>
+				</ul>
+			</div>
+			<div class="entery-container">
+				<div class="entery">
+					<img src="https://randomuser.me/api/portraits/men/62.jpg" alt="" class="profile">
+					<div class="text">
+						<span class="title">New subpage for <span class="name">Janet</span></span>
+						<span class="time">8-10am</span>
+					</div>
 
+				</div>
+				<div class="entery">
+					<img src="https://randomuser.me/api/portraits/men/81.jpg" alt="" class="profile">
+					<div class="text">
+						<span class="title">Launch with <span class="name">Diana</span></span>
+						<span class="time">11-12am Hangoust</span>
+					</div>
+				</div>
+				<div class="entery">
+					<img src="https://randomuser.me/api/portraits/men/50.jpg" alt="" class="profile">
+					<div class="text">
+						<span class="title">Catch up with <span class="name">Tom</span></span>
+						<span class="time">12am Resturan</span>
+					</div>
+				</div>
+			</div>
+			<div class="action-button"></div>
+		</div>
+	</div>
 </body>
 </html>
