finish 1st card

--- a/dribbble__2/index.html
+++ b/dribbble__2/index.html
@@ -1,11 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="site/css/main.css">
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="site/css/main.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+    <link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
 </head>
+
 <body>
-	<h2>hi</h2>
+    <div class="container">
+        <div class="top-view">
+            <div class="top-bacground-picture">
+                <div class="overlay">
+                    <div class="acc_setting">
+                        <i class="fa fa-cog" aria-hidden="true"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="my-page">
+                <div class="header">
+                    <div class="profile_img-wraper main">
+                        <img src="img/avatar.jpeg" alt="" class='picture-profiles main'>
+                    </div>
+                    <div class="edit-btn btn">
+                        <span>
+							<i class="fa fa-pencil" aria-hidden="true"></i>
+						</span>
+                    </div>
+                    <h1 class="name myname">June Zhou</h1>
+                    <span class="main-bacground">
+						Graphic designer
+					</span>
+                </div>
+                <div class="wrapper-list-items">
+                    <ul class="main-list">
+                        <li class='holder like'>
+                            <span class='like-counter'>1115</span>
+                            <span class='bottom-wrapper-stats'>Likes</span>
+                        </li>
+                        <li class='holder followers'>
+                            <span class='followers-counter'>367</span>
+                            <span class='bottom-wrapper-stats'>Followers</span>
+                        </li>
+                        <li class='holder followind'>
+                            <span class='following-counter'>1052</span>
+                            <span class='bottom-wrapper-stats'>Following</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="top-menu-wrapper">
+            <ul class="bottom-menu">
+                <li class='item curent_tab'><span>Projects</span></li>
+                <li class='item'><span>Collections</span></li>
+            </ul>
+        </div>
+        <div class="bottom-view">
+            <div class="prj-container">
+                <div class="carusel-prj">
+                    <ul class="prj-img-wrapper">
+                        <li class="item_prj"><img src="img/item_1.jpeg" alt=""></li>
+                        <li class="item_prj"><img src="img/item_2.jpg" alt=""></li>
+                        <li class="item_prj"><img src="img/item_3.jpeg" alt=""></li>
+                    </ul>
+                </div>
+                <div class="prj-short-desc">
+                    <span class="prj-name">Landscape</span>
+                    <span class="prj-autor">June Zhou</span>
+                </div>
+            </div>
+            <div class="prj-container">
+                <div class="carusel-prj">
+                    <ul class="prj-img-wrapper">
+                        <li class="item_prj"><img src="img/item_1.jpeg" alt=""></li>
+                        <li class="item_prj"><img src="img/item_2.jpg" alt=""></li>
+                        <li class="item_prj"><img src="img/item_3.jpeg" alt=""></li>
+                    </ul>
+                </div>
+                <div class="prj-short-desc">
+                    <span class="prj-name">Landscape</span>
+                    <span class="prj-autor">June Zhou</span>
+                </div>
+            </div>
+        </div>
+        <div class="my-page-settings">
+            <div class="wrapper-setting-list">
+                <ul class="list-settings">
+                    <li class="setting-item">
+                        <a href="#">
+                            <i class="fa fa-home" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="setting-item ">
+                        <a href="#">
+                            <i class="fa fa-compass" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="setting-item curent-setting">
+                        <a href="#">
+                            <i class="fa fa-camera" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="setting-item">
+                        <a href="#">
+                            <i class="fa fa-bell" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="setting-item">
+                        <a href="#">
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
